# DirtyRAG

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  quick.yaml  ramdocs_200.yaml  step1_mock.yaml  step2_mock.yaml  step3_mock.yaml
docs/: DirtyRAG_实验报告_RAMDocs200.md  DirtyRAG_工程项目设计文档_v1.md  DirtyRAG_选题调研与论文方案_v2_评审修订版.md  仓库与复现说明_交接文档.md  项目说明_易懂版.md
paper_results/ramdocs_200_final/: metrics.csv  per_case_metrics.jsonl  predictions.jsonl  ramdocs_200.jsonl
paper_results/ramdocs_200_final/evidence_boards/: ramdocs_000001_evidenceboard_rag.json  ramdocs_000002_evidenceboard_rag.json  ramdocs_000003_evidenceboard_rag.json  ramdocs_000004_evidenceboard_rag.json  ramdocs_000005_evidenceboard_rag.json  ramdocs_000006_evidenceboard_rag.json  ramdocs_000007_evidenceboard_rag.json  ramdocs_000008_evidenceboard_rag.json  ramdocs_000009_evidenceboard_rag.json  ramdocs_000010_evidenceboard_rag.json  ramdocs_000011_evidenceboard_rag.json  ramdocs_000012_evidenceboard_rag.json  ramdocs_000013_evidenceboard_rag.json  ramdocs_000014_evidenceboard_rag.json  ramdocs_000015_evidenceboard_rag.json  ramdocs_000016_evidenceboard_rag.json  ramdocs_000017_evidenceboard_rag.json  ramdocs_000018_evidenceboard_rag.json  ramdocs_000019_evidenceboard_rag.json  ramdocs_000020_evidenceboard_rag.json  ramdocs_000021_evidenceboard_rag.json  ramdocs_000022_evidenceboard_rag.json  (+178 more)
src/dirtyrag/: __init__.py  cli.py  config.py  llm_client.py  prompts.py  schemas.py
tests/: test_evidence.py  test_methods.py  test_metrics.py  test_schema.py
(+26 files in other folders)
